Create brand and cards funcionality

--- a/src/assets/styles/components/_toolbar.scss
+++ b/src/assets/styles/components/_toolbar.scss
@@ -2,7 +2,7 @@ mat-toolbar-row {
   border-bottom: 1px solid var(--gray);
 
   h1 {
-    font-size: x-large !important;
+    font-size: xx-large !important;
   }
 
   .img,
