--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@
 /* BUTTON */
 @import "../src/assets/styles/components/button";
 
+/* CARD */
+@import "../src/assets/styles/components/card";
+
 /* GENERAL */
 html,
 body {
