--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<div class="dashboard-container">
+<div class="dashboard-container d-flex align-items-center justify-content-center">
+    <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize">
+        <mat-grid-tile class="animate__animated animate__zoomIn" *ngFor="let item of brands">
+            <app-card [item]="item" (selectClick)="selectBrand($event)"></app-card>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
