--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.scss
@@ -2,6 +2,7 @@
   // 86px = toolbar (64px) + footer (24px)
   height: calc(100vh - 88px);
   overflow: auto;
+  background: var(--light-bg) !important;
 }
 
 ::ng-deep .dark-theme {
