Add json-server and db.json with the cars list. Add cars: service, feature and model. Modify styles

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,6 +1,6 @@
-::ng-deep .dark-theme {
+.dark-theme {
   .footer-container {
-    background: var(--dark-bg) !important;
+    background: var(--dark-regular) !important;
     span,
     a {
       color: var(--white);
