--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,12 @@
 /* CARD */
 @import "../src/assets/styles/components/card";
 
+/* FOOTER */
+@import "../src/assets/styles/components/footer";
+
+/* LAYOUT */
+@import "../src/assets/styles/components/layout";
+
 /* GENERAL */
 html,
 body {
