--- a/src/app/core/pages/layout/layout.component.html
+++ b/src/app/core/pages/layout/layout.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
-<div>
+<div class="layout-container">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
