--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container d-flex align-items-center justify-content-center">
+<div class="dashboard-container h-100 d-flex align-items-center justify-content-center">
     <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize">
         <mat-grid-tile class="animate__animated animate__zoomIn" *ngFor="let item of brands">
             <app-card [item]="item" (selectClick)="selectBrand($event)"></app-card>
