--- a/src/assets/styles/components/_layout.scss
+++ b/src/assets/styles/components/_layout.scss
@@ -1,12 +1,12 @@
-.dashboard-container {
+.layout-container {
   // 86px = toolbar (64px) + footer (24px)
   height: calc(100vh - 88px);
   overflow: auto;
   background: var(--light-bg) !important;
 }
 
-::ng-deep .dark-theme {
-  .dashboard-container {
+.dark-theme {
+  .layout-container {
     background: var(--dark-bg) !important;
   }
 }
