--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -2,4 +2,10 @@
   .mat-icon {
     line-height: 1 !important;
   }
+
+  &.btn-more {
+    position: absolute;
+    top: -16px;
+    right: -16px;
+  }
 }
