Add filters and message component. Add styles. Modify funcionality of cars, car.service and car.service test. Add filter test

--- a/src/app/features/cars/pages/cars/cars.component.html
+++ b/src/app/features/cars/pages/cars/cars.component.html
@@ -1,7 +1,27 @@
-<div class="dashboard-container h-100 d-flex align-items-center justify-content-center">
-    <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize">
-        <mat-grid-tile class="animate__animated animate__zoomIn" *ngFor="let car of cars">
-            <app-card-data [item]="car"></app-card-data>
-        </mat-grid-tile>
-    </mat-grid-list>
+<div class="actions-container d-flex align-items-center justify-content-between w-100 px-3 py-2">
+    <app-filter class="w-100 ms-2" [fields]="fieldsSort" (searchChangeClick)="searchCars($event)" (sortChangeClick)="sortCars($event)">
+    </app-filter>
+</div>
+
+<div id="cars-container" class="p-3" infinite-scroll [infiniteScrollDistance]="scrollDistance" [infiniteScrollUpDistance]="scrollUpDistance"
+    [infiniteScrollThrottle]="throttle" (scrolled)="loadCars()" [scrollWindow]="false" (scroll)="onScroll($event)">
+    <div *ngIf="cars.length > 0 && !isLoading">
+        <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize">
+            <mat-grid-tile class="animate__animated animate__zoomIn" *ngFor="let car of cars">
+                <app-card-data [item]="car"></app-card-data>
+            </mat-grid-tile>
+        </mat-grid-list>
+        <div *ngIf="!isScroll && !isLoading && cars.length > MAX_ITEM_PAGE" class="p-4 text-center animate__animated animate__zoomIn">
+            <button mat-flat-button (click)="loadCars();">{{"car.more_cars" | translate}}</button>
+        </div>
+
+        <button *ngIf="isUpward" class="animate__animated animate__zoomIn" mat-fab (click)="onScrollTop()">
+            <mat-icon class="material-icons-outlined">arrow_upward</mat-icon>
+        </button>
+    </div>
+    <div *ngIf="isLoading" class="p-4 d-flex align-items-center justify-content-center h-100 w-100 animate__animated animate__zoomIn">
+        <mat-spinner></mat-spinner>
+    </div>
+    <app-message *ngIf="cars.length === 0 && !isLoading" [message]="message">
+    </app-message>
 </div>
