--- a/src/app/shared/card/card-data.component.html
+++ b/src/app/shared/card/card-data.component.html
@@ -8,7 +8,7 @@
   <div class="d-flex align-items-center justify-content-center">
     <img mat-card-xl-image src="{{item.image}}">
   </div>
-  <mat-card-subtitle class="pt-3">{{item.currency}}</mat-card-subtitle>
+  <mat-card-subtitle class="pt-3">{{currency}}</mat-card-subtitle>
   <div class="d-flex align-items-center justify-content-between pb-3">
     <span>
       <mat-icon svgIcon="icon-starter"></mat-icon> {{item.power}} cv
