--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,21 @@
 /* LAYOUT */
 @import "../src/assets/styles/components/layout";
 
+/* FORM FIELD */
+@import "../src/assets/styles/components/form-field";
+
+/* SCROLLBAR */
+@import "../src/assets/styles/components/scrollbar";
+
+/* SNACKBAR */
+@import "../src/assets/styles/components/snackbar";
+
+/* ICON */
+@import "../src/assets/styles/components/icon";
+
+/* SPINNER */
+@import "../src/assets/styles/components/spinner";
+
 /* GENERAL */
 html,
 body {
