--- a/src/assets/styles/vg-style.scss
+++ b/src/assets/styles/vg-style.scss
@@ -5,11 +5,11 @@
 /*FONT FAMILY*/
 @font-face {
   font-family: "poppins";
-  src: url("/assets/fonts/poppins-regular-webfont.eot");
-  src: url("/assets/fonts/poppins-regular-webfont.eot?#iefix")
+  src: url("../fonts/poppins-regular-webfont.eot");
+  src: url("../fonts/poppins-regular-webfont.eot?#iefix")
       format("embedded-opentype"),
-    url("/assets/fonts/poppins-regular-webfont.woff") format("woff"),
-    url("/assets/fonts/poppins-regular-webfont.ttf") format("truetype");
+    url("../fonts/poppins-regular-webfont.woff") format("woff"),
+    url("../fonts/poppins-regular-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,6 @@
 /*COLORS*/
 
 :root {
-  --primary: #13c1ac;
   --black: #000000;
   --blue: #00adee;
   --indigo: #6610f2;
