--- a/src/assets/styles/components/_form-field.scss
+++ b/src/assets/styles/components/_form-field.scss
@@ -18,6 +18,7 @@
     height: 20px !important;
     display: flex !important;
     padding: 0 6px !important;
+    line-height: 17px;
   }
 
   .mat-form-field-label,
