--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,9 @@
 /* SPINNER */
 @import "../src/assets/styles/components/spinner";
 
+/* DIALOG */
+@import "../src/assets/styles/components/dialog";
+
 /* GENERAL */
 html,
 body {
