--- a/src/app/features/cars/pages/cars/cars.component.html
+++ b/src/app/features/cars/pages/cars/cars.component.html
@@ -1,6 +1,18 @@
 <div class="actions-container d-flex align-items-center justify-content-between w-100 px-3 py-2">
-    <app-filter class="w-100 ms-2" [fields]="fieldsSort" (searchChangeClick)="searchCars($event)" (sortChangeClick)="sortCars($event)">
+    <app-filter class="w-100 ms-2 me-2" [fields]="fieldsSort" (searchChangeClick)="searchCars($event)" (sortChangeClick)="sortCars($event)">
     </app-filter>
+    <mat-form-field appearance="fill" class="me-2">
+        <mat-select [(ngModel)]="filter.id" placeholder="{{'brand.change' | translate}}" (selectionChange)="brandChange()" name="brand.id">
+            <mat-option *ngFor="let brand of brands" [value]="brand.id">
+                <img class="me-2" src="{{brand.image}}">
+                <span>{{ brand.name}}</span>
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button mat-flat-button (click)="openDialog();">
+        <mat-icon class="material-icons-outlined">add</mat-icon>
+        {{"car.add" | translate}}
+    </button>
 </div>
 
 <div id="cars-container" class="p-3" infinite-scroll [infiniteScrollDistance]="scrollDistance" [infiniteScrollUpDistance]="scrollUpDistance"
@@ -26,3 +38,5 @@
     <app-message *ngIf="cars.length === 0 && !isLoading" [message]="message">
     </app-message>
 </div>
+
+<app-dialog-car #dialogCar (closeClick)="closeDialog()"></app-dialog-car>
