--- a/src/app/features/cars/components/dialog-car/dialog-car.component.html
+++ b/src/app/features/cars/components/dialog-car/dialog-car.component.html
@@ -1,8 +1,5 @@
 <app-dialog #dialog [config]="dialogConfig" (closeClick)="close()">
-    <div header>
-
-    </div>
-    <div content>
-
+    <div content class="w-100 h-100">
+        <app-form-car></app-form-car>
     </div>
 </app-dialog>
