--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -6,15 +6,15 @@
           <mat-icon class="material-icons-outlined">close</mat-icon>
         </button>
       </div>
-      <h1 class="text-center">{{ config.title | translate }}</h1>
+      <h1>{{ config.title | translate }}</h1>
       <ng-content select="[header]"></ng-content>
     </header>
-    <mat-dialog-content>
+    <mat-dialog-content class="h-100">
       <ng-content select="[content]"></ng-content>
     </mat-dialog-content>
-    <mat-dialog-actions *ngIf="config.showCancelButton && config.showConfirmButton" class="dialog-actions">
-      <button mat-flat-button *ngIf="config.showCancelButton" (click)="cancel()">{{ "common.cancel" | translate }}</button>
-      <button mat-flat-button *ngIf="config.showConfirmButton" (click)="confirm()">{{ "common.confirm" | translate }}</button>
+    <mat-dialog-actions *ngIf="config.showCancelButton && config.showConfirmButton" class="dialog-actions d-flex justify-content-end">
+      <button mat-flat-button *ngIf="config.showCancelButton" color="accent" (click)="cancel()">{{ "dialog.buttons.cancel" | translate }}</button>
+      <button mat-flat-button *ngIf="config.showConfirmButton" (click)="confirm()">{{ "dialog.buttons.save" | translate }}</button>
     </mat-dialog-actions>
   </main>
 </ng-template>
