Add form car funcionality. Add car selector funcionality. Solve little bugs

--- a/src/app/features/cars/components/dialog-car/dialog-car.component.html
+++ b/src/app/features/cars/components/dialog-car/dialog-car.component.html
@@ -1,5 +1,5 @@
-<app-dialog #dialog [config]="dialogConfig" (closeClick)="close()">
+<app-dialog #dialog [config]="dialogConfig" (confirmClick)="saveCar()" (cancelClick)="close()" (closeClick)="close()">
     <div content class="w-100 h-100">
-        <app-form-car></app-form-car>
+        <app-form-car #formCar [action]=action></app-form-car>
     </div>
 </app-dialog>
