--- a/src/app/features/cars/components/form-car/form-car.component.html
+++ b/src/app/features/cars/components/form-car/form-car.component.html
@@ -5,7 +5,6 @@
         </div>
         <div>
             <div class="row pb-5">
-                <!-- car.fields.model.display / placeholder / error -->
                 <mat-form-field appearance="outline" class="col-6">
                     <mat-label>{{ "car.fields.model.display" | translate }}</mat-label>
                     <input matInput placeholder="{{ 'car.fields.model.placeholder' | translate }}" [formControlName]="'model'" required />
@@ -26,19 +25,21 @@
             <div class="row pb-2">
                 <mat-form-field appearance="outline" class="col-4">
                     <mat-label>{{ "car.fields.price.display" | translate }}</mat-label>
-                    <input matInput placeholder="{{ 'car.fields.price.placeholder' | translate }}" [formControlName]="'price'" required />
+                    <input matInput type="number" min="0" placeholder="{{ 'car.fields.price.placeholder' | translate }}" [formControlName]="'price'"
+                        required />
                     <mat-error *ngIf="carForm.controls.model.invalid">{{ "car.fields.price.error.required" | translate }}
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="col-4">
                     <mat-label>{{ "car.fields.power.display" | translate }}</mat-label>
-                    <input matInput placeholder="{{ 'car.fields.power.placeholder' | translate }}" [formControlName]="'power'" required />
+                    <input matInput type="number" min="0" max="600" placeholder="{{ 'car.fields.power.placeholder' | translate }}"
+                        [formControlName]="'power'" required />
                     <mat-error *ngIf="carForm.controls.model.invalid">{{ "car.fields.power.error.required" | translate }}
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="col-4">
-                    <mat-select [formControlName]="'fuel'" name="fuelType.value">
-                        <mat-option *ngFor="let fuelType of fuelTypes" [value]="fuelType.value">
+                    <mat-select [formControlName]="'fuel'" name="fuelType.type">
+                        <mat-option *ngFor="let fuelType of fuelTypes" [value]="fuelType.type">
                             <span>{{ fuelType.value | translate}}</span>
                         </mat-option>
                     </mat-select>
@@ -53,7 +54,7 @@
             <mat-label>{{ "car.fields.description.display" | translate }}</mat-label>
             <textarea matInput placeholder="{{ 'car.fields.description.placeholder' | translate }}" cdkTextareaAutosize cdkAutosizeMinRows="8"
                 cdkAutosizeMaxRows="8" [formControlName]="'description'" required>
-    </textarea>
+            </textarea>
             <mat-error *ngIf="carForm.controls.model.invalid">{{ "car.fields.description.error.required" | translate }}
             </mat-error>
         </mat-form-field>
