--- a/src/app/features/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/pages/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="dashboard-container d-flex align-items-center justify-content-center">
-    <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize">
+    <mat-grid-list class="p-3 w-100" [rowHeight]="rowHeight" [cols]="columns" [gutterSize]="gutterSize"
+        (window:resize)="setDimensions($event.target)">
         <mat-grid-tile class="animate__animated animate__zoomIn" *ngFor="let brand of brands">
             <app-card-image [item]="brand" (selectClick)="navigateToCars($event)"></app-card-image>
         </mat-grid-tile>
