--- a/src/app/shared/message/message.component.html
+++ b/src/app/shared/message/message.component.html
@@ -1,5 +1,5 @@
 <div class="w-100 h-100 p-3 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn">
     <img class="pb-2" src="{{message.image}}">
-    <h1>{{message.title | translate}}</h1>
-    <h1>{{message.description | translate}}</h1>
+    <h1 class="text-center">{{message.title | translate}}</h1>
+    <h1 class="text-center">{{message.description | translate}}</h1>
 </div>
