--- a/src/assets/styles/components/_toolbar.scss
+++ b/src/assets/styles/components/_toolbar.scss
@@ -1,15 +1,26 @@
-mat-toolbar-row {
-  border-bottom: 1px solid var(--gray);
+@mixin toolbar-content-sizes($h1-f-z, $width, $height, $f-z) {
+  mat-toolbar-row {
+    border-bottom: 1px solid var(--gray);
+    h1 {
+      font-size: $h1-f-z !important;
+    }
 
-  h1 {
-    font-size: xx-large !important;
+    .img,
+    .mat-icon {
+      width: $width;
+      height: $height;
+      font-size: $f-z;
+      cursor: pointer;
+    }
   }
+}
 
-  .img,
-  .mat-icon {
-    width: 42px;
-    height: 42px;
-    font-size: 42px;
-    cursor: pointer;
-  }
+@include toolbar-content-sizes(xx-large, 42px, 42px, 42px);
+
+@media (max-width: 768px) {
+  @include toolbar-content-sizes(small, 36px, 36px, 36px);
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  @include toolbar-content-sizes(medium, 38px, 38px, 38px);
 }
